--- a/omk/index.html
+++ b/omk/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Omk</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
+    <!-- D3.js -->
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+
+    <!-- Jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <title>OMK</title>
+
 </head>
 <body>
-    display data
+    
+<div class="container">
+    <div class="row">
+        <div class="btn btn-primary">
+            Display Data
+        </div>
+    </div>
+</div>
+
+<script>
+    d3.json("data/resource_templates.json", function(data){
+        console.log(data)
+   });
+</script>
+
 </body>
 </html>
