--- a/ex1/index.html
+++ b/ex1/index.html
@@ -27,9 +27,20 @@
 </head>
 <body>
 
+<nav class="shadow-sm text-center py-3 bg-white">
+    <div class="container">
+      <div class="row text-center">
+        <a href="#">
+            <img src="https://www.univ-paris8.fr/squelettes/images/logo-p8.svg" alt="logo" height="60">
+        </a>
+      </div>
+    </div>
+</nav>
+
+<h3 class="text-center mt-5">Liste des étudiants de la promo THYP 2021-2022</h3>
 
 <div class="container py-5">
-    <div id="students" class="row my-5">
+    <div id="students" class="row">
 
     </div>
 </div>
